--- a/albumes.css
+++ b/albumes.css
@@ -24,25 +24,30 @@ header{
     border-radius: 10px;
 }
 
-.seccionUsuario{
+.nyl{
     height: 22%;
-    display: inline-block;
-    margin: 15px;
-}
-
-.seccionUsuario img{
-    width: 100px;
-    height: 100px;
-    border-radius: 60%;
-    float: left;
-}
-
-.seccionUsuario h2{
-    float: right;
-    margin-top: 20%;
-    margin-left: 15px;
-    font-size: 20px;
+    display: inline-block;   
+    justify-content: center;
     align-content: center;
+    margin: 15px;
+    margin-left: 25%;
+    margin-right: 25%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.nyl img{
+    width: 120px;
+    height: 120px;
+    justify-content: center;
+    align-content: center;
+}
+
+.nyl h2{
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font-size: 20px;
+    text-align: center;
 }
 
 .menu{
@@ -67,6 +72,14 @@ a{
 
 #uno, #dos, #tres, #cuatro, #cinco{
     justify-self: center;
+    align-items: center;
+}
+
+
+#uno, #dos, #tres, #cuatro, #cinco{
+    margin: 8px 3px 10px 3px;
+    padding-bottom:9px;
+    height: 22px;
     align-items: center;
 }
 
@@ -132,25 +145,27 @@ main{
     font-size: 21px;
 }
 
-.nyl {
+.seccionUsuario {
     display: inline-block;
     background-color: black;
     float: right;
 }
 
-.nyl h3{
+.seccionUsuario h2{
     float: left;
     margin-top: 10px;
     margin-right: 10px;
     margin-left: 10px;
     color: #8E1717;
+    font-size: 16px;
 } 
 
-.nyl img{
+.seccionUsuario img{
     width: 48px;
     height: 48px;
     float: right;
     margin-top: -3px;
+    border-radius: 100%;
 }
 
 .barraBusq{
@@ -367,7 +382,7 @@ footer{
 }
 
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/    
-/**/@media (max-width: 500px){
+@media (max-width: 500px){
     header{
         height: 85vh;
         width: 1cm;
@@ -387,18 +402,18 @@ footer{
 
     #inicio, #descubre{
     display: none;
-    }
+}
 
-    .nyl{
+    .seccionUsuario{
         justify-content: center;
         margin: 5px 7px 0px 7px;
     }
 
-    .nyl h3{
+    .seccionUsuario h2{
         display: none;
     }
 
-    .nyl img{
+    .seccionUsuario img{
         width: 40px;
         height: 40px; 
     }
@@ -407,11 +422,11 @@ footer{
         display:none;
     }
 
-    .seccionUsuario h2{
+    .nyl h2{
         display: none;
     }
 
-    .seccionUsuario{
+    .nyl{
         width: 45px;
         height: 45px;
         padding: 0px;
@@ -419,7 +434,7 @@ footer{
         margin-left: -2px;
     }
 
-    .seccionUsuario img{
+    .nyl img{
         width: 42px;
         height: 42px;
     }
@@ -475,39 +490,113 @@ footer{
         padding: 2px;
     }
 
-    #imagenCancion{
+    #artista img{
         width: 30%;
+        height: 70%;
+        margin: 3px;
+    }
+
+    .fotoynombre{
+        padding: 5px;
+        width: 97%;
+        height: 20%;
+        margin-bottom: 5px;
+    }
+
+    .info{
+        width:65%;
+    }
+
+    .info h1{
+        font-size: 20px;
+        margin: 10px 20px 10px 3px;
+    }
+
+    .info p{
+        font-size: 12px;
+        margin-left: 5px;
+    }
+
+    #imagenCancion{
+        width: 70%;
+        margin-top: 2%;
     }
 
     #imagenCancion img{
         margin-right: 0px;
+        width: 20%;
+        height: 20% ;
     }
 
     #infoCancion{
-        width: 40%;
-        margin-top: 0px;
+        width: 75%;
+        height: 25%;
+        margin-top: -25px;
         margin-left: 0px;
     }
 
-    #barraProgreso{
-        width: 100%;
-        margin-left: 25%;
+    #infoCancion h2{
+        font-size: 16px;
+        margin-bottom: 5px;
     }
 
+    #infoCancion h3{
+        font-size: 14px;
+    }
+
+    #barraProgreso{
+        display:none;
+    }
+
+    #barraProgreso-responsive{
+        display: flex;
+        background-color: #5f1010;
+        height: 3px;
+        width: 95%;;
+        margin-left: 1.25%;
+        margin-right: 1.25%;
+    }
+
+    .progress-responsive {
+        height: 3px;
+        border-radius: 5px;
+        background-color: #000000;
+        justify-content: center;
+    }
+
+    .progress-bar-responsive {
+        height: 100%;
+        display: flex;
+        background-color: #0e0e0e;
+        align-items: center;
+        border-radius: 5px;
+    }
+    
     #barraReproductora-iconos{
-        width: 120%;
-        height: 20%;
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding-top: 15%;
     }
 
     #barraReproductora-iconos img{
-        width: 20px;
-        height: 20px;
-        margin: 5px;
+        width: 22px;
+        height: 22px;
+        margin: 4px;
+    }
+
+    #repetir, #aleatorio{
+        display: none;
     }
 
     #barraReproduccion{
-        margin-top: 2.5%;
-        margin-bottom: 2.5%;
+        width: 30%;
+        height: 90%;
+        margin: 0;
+        margin-top: 2%;
+        float: left;
+        flex-wrap: wrap;
+        align-content: center;
     }
 
     #contenedor2{
@@ -515,6 +604,31 @@ footer{
         height: 50%;
     }
 
+    #canciones{
+        width: 96%;
+        padding: 6px;
+    }
 
+    #canciones h1{
+        font-size: 18px;
+        margin: 5px;
+    }
+
+    #cancion{
+        width: 98%;
+        height: 30%;
+    }
+
+    #cancion img{
+        width: 20%;
+        height: 20%;
+    }
+
+    .info-popular{
+        margin-right: 20%;
+    }
+
+    .info-popular h3{
+        font-size: 15px;
+    }
 }
-/* ++++++++++++ MAIN (INICIO) +++++++++++ */
